Quorum/Library/Tests/TypeCheckerGenerated/Pass/RetAssignIntObjUndefined.quorum
class Main
    action Main
        Integer v = Test()
        if v = undefined
            output "passed"
        end
    end

    action Test() returns Integer
        return undefined
    end
end