Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextObjIntegerField.quorum
class Main
    Text v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Text
        integer var = 5
        return var
    end
end